[package]
name = "db-rs"
edition = "2024"
version = "0.1.0"
authors = ["Andrew Hinh <ajhinh@gmail.com>"]
license = "MIT"
repository = "https://github.com/andrewhinh/db-rs"

[[bin]]
name = "db-rs-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "db-rs-server"
path = "src/bin/server.rs"


[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
